--- a/resources/src/assets/scss/components/_index.scss
+++ b/resources/src/assets/scss/components/_index.scss
@@ -1,7 +1,7 @@
 // @import "navigation";
 // @import "./swiper/index";
 @import "burger";
-// @import "modalForm";
+ @import "modalForm";
 @import "animated";
 @import "mobile-menu";
-@import "popup";
+//@import "popup";
