--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -257,3 +257,13 @@ body.modal-open {
     align-items: center;
     height: 100%;
 }
+
+.dot,
+.ellipse, img
+ {
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
